# git-root

./: Cargo.toml
src/: main.rs
